# PhotoTrail

./: .gitignore  README.md  README_CN.md  next.config.mjs  package.json  pnpm-lock.yaml
app/: layout.tsx  page.tsx
app/p/[project]/: page.tsx
components/: photo-card.tsx  photo-gallery.tsx  photo-map.tsx  photo-viewer.tsx
dbgen/: .gitignore  example.json  main.py  pyproject.toml
hooks/: use-scroll-spy.ts
lib/: photo-data.ts
